// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA (Cloud) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="AaaCloudpathCloudDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA (On Premise) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="AaaCloudpathOnPremDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA Proxy diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="AaaProxy"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA Proxy diagram when enabling Authentication Service button 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="AaaProxy"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          src="Aaa"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - AAA should render AAA diagram when enabling Accounting Service button 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="Aaa"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Click Through) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="ClickThrough"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Cloudpath - Cloud) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="CaptivePortalCloudpathCloudDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Cloudpath - On Premise) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="CaptivePortalCloudpathOnPremDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Guest Pass) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="GuestPass"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Host Approval) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="HostApproval"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (Self Sign In) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="SelfSignIn"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr With Psk) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="WisprPsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal (WISPr) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="Wispr"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Captive portal should render Captive portal default diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Captive Portal"
          src="ClickThrough"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - DPSK should render DPSK (Cloud) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Dynamic Pre-Shared Key (DPSK)"
          src="DpskCloudpathCloudDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - DPSK should render DPSK (On Premise) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Dynamic Pre-Shared Key (DPSK)"
          src="DpskCloudpathOnPremDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - DPSK should render DPSK diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Dynamic Pre-Shared Key (DPSK)"
          src="Dpsk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - Hotspot20 should render Hotspot20 diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          src="Hotspot20"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - OPEN should render OPEN (Cloud) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Open Network"
          src="OpenCloudpathCloudDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - OPEN should render OPEN (On Premise) diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Open Network"
          src="OpenCloudpathOnPremDeployment"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - OPEN should render OPEN diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Open Network"
          src="Open"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - PSK should render AAA diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Enterprise AAA (802.1X)"
          src="Aaa"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram NetworkDiagram - PSK should render PSK diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          alt="Passphrase (PSK/SAE)"
          src="Psk"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkDiagram should render default diagram successfully 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-center"
  >
    <div
      class="ant-col"
    >
      <div
        class="styledComponents__Diagram-sc-bsypt3-0 etPTIs"
      >
        <img
          src="None"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
